--- a/action.html
+++ b/action.html
@@ -15,12 +15,13 @@
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Logo</a>
-                <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                <img src="./images/téléchargement (2).jfif" class="logo" alt="image logo">
+                <!-- <a class="navbar-brand" href="#">Logo</a> -->
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
-                </button> -->
+                </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
@@ -35,8 +36,8 @@
                                 Menu
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="./action.html">Action</a></li>
-                                <li><a class="dropdown-item" href="./action1.html">Action 1</a></li>
+                                <li><a class="dropdown-item" href="./action.html">Idée de réalisation</a></li>
+                                <li><a class="dropdown-item" href="./action1.html">Présentez moi vos projets</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
@@ -47,7 +48,13 @@
                 </div>
             </div>
         </nav>
-        <h2>ACTION</h2>
+        <h2 class="action">Idée de réalisation</h2>
+        <ul>
+            <li>Site statique pour vous présenter ou vos travaux </li>
+            <li>Site statique pour présenter votre entreprise</li>
+            <li>Site dynamique pour présenter votre entreprise</li>
+            <li>Site e commerce</li>
+        </ul>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
