--- a/action1.html
+++ b/action1.html
@@ -7,7 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="./action1.html">
+    <!-- <link rel="stylesheet" href="./action1.html"> -->
+    <link rel="stylesheet" href="./style.css">
     <title>ACTION1</title>
 </head>
 
@@ -15,12 +16,13 @@
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Logo</a>
-                <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                <img src="./images/téléchargement (2).jfif" class="logo" alt="image logo">
+                <!-- <a class="navbar-brand" href="#">Logo</a> -->
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
-                </button> -->
+                </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
@@ -35,8 +37,8 @@
                                 Menu
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="./action.html">Action</a></li>
-                                <li><a class="dropdown-item" href="./action1.html">Action 1</a></li>
+                                <li><a class="dropdown-item" href="./action.html">Idée de réalisation</a></li>
+                                <li><a class="dropdown-item" href="./action1.html">Présentez moi vos projets</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
@@ -47,7 +49,9 @@
                 </div>
             </div>
         </nav>
-        <h2>ACTION 1</h2>
+        <h2 class="action1">Présentez moi vos idées</h2>
+        <h5>Mes coordonnées</h5>
+        <a href="mailto:stevetissier@orange.fr">stevetissier@orange.fr</a>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
