--- a/description.html
+++ b/description.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="./action1.html">
+    <link rel="stylesheet" href="./style.css">
     <title>DESCRIPTION</title>
 </head>
 
@@ -15,12 +15,12 @@
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Logo</a>
-                <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                <img src="./images/téléchargement (2).jfif" class="logo" alt="image logo">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
-                </button> -->
+                </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
@@ -35,8 +35,8 @@
                                 Menu
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="./action.html">Action</a></li>
-                                <li><a class="dropdown-item" href="./action1.html">Action 1</a></li>
+                                <li><a class="dropdown-item" href="./action.html">Idée de réalisation</a></li>
+                                <li><a class="dropdown-item" href="./action1.html">Présentez moi vos projets</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
@@ -47,7 +47,98 @@
                 </div>
             </div>
         </nav>
-        <h2>DESCRIPTION</h2>
+        <h2 class="description">Qui suis je et mon parcours</h2>
+        <!-- MODAL -->
+        <!-- Modal lien -->
+        <button type="button" class="btn btn-primary mt-5" data-bs-toggle="modal" data-bs-target="#exampleModal"
+            data-bs-whatever="@mdo">Ma formation</button>
+        <button type="button" class="btn btn-primary mt-5" data-bs-toggle="modal" data-bs-target="#exampleModal1"
+            data-bs-whatever="@fat">Mon expérience</button>
+        <button type="button" class="btn btn-primary mt-5" data-bs-toggle="modal" data-bs-target="#exampleModal2"
+            data-bs-whatever="@getbootstrap">Ma mobilité</button>
+        <!-- Fin Modal lien -->
+
+        <!-- Modal 1 -->
+        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Ma formation</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <form>
+                            <div class="mb-3">
+                                <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, incidunt!</h3>
+                            </div>
+                            <div class="mb-3">
+                                <!-- <label for="message-text" class="col-form-label">Message:</label> -->
+                                <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, rerum? </h3>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Fin Modal 1 -->
+
+        <!-- Modal 2  -->
+        <div class="modal fade" id="exampleModal1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Mon expérience</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <form>
+                            <div class="mb-3">
+                                <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, incidunt!</h3>
+                            </div>
+                            <div class="mb-3">
+                                <!-- <label for="message-text" class="col-form-label">Message:</label> -->
+                                <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, rerum? </h3>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Fin Modal 2 -->
+
+        <!-- Modal 3 -->
+        <div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Ma mobilité</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        <form>
+                            <div class="mb-3">
+                                <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, incidunt!</h3>
+                            </div>
+                            <div class="mb-3">
+                                <!-- <label for="message-text" class="col-form-label">Message:</label> -->
+                                <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, rerum? </h3>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Fin Modal 3 -->
+        <!-- FIN MODAL -->
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
