--- a/index.html
+++ b/index.html
@@ -15,8 +15,13 @@
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <img src="./images/téléchargement (2).jfif" class="logo" alt="">
+                <img src="./images/téléchargement (2).jfif" class="logo" alt="image logo">
                 <!-- <a class="navbar-brand">Logo</a> -->
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
@@ -40,11 +45,11 @@
                             </ul>
                         </li>
                     </ul>
-                    <form class="d-flex">
+                    <!-- <form class="d-flex">
                         <input class="form-control me-2 text-center" type="search" placeholder="Rechercher"
                             aria-label="Search">
                         <button class="btn btn-outline-success" type="submit">Rechercher</button>
-                    </form>
+                    </form> -->
                 </div>
             </div>
         </nav>
