--- a/photo.html
+++ b/photo.html
@@ -16,12 +16,13 @@
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Logo</a>
-                <!-- <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                <img src="./images/téléchargement (2).jfif" class="logo" alt="image logo">
+                <!-- <a class="navbar-brand" href="#">Logo</a> -->
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
-                </button> -->
+                </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
@@ -36,8 +37,8 @@
                                 Menu
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <li><a class="dropdown-item" href="./action.html">Action</a></li>
-                                <li><a class="dropdown-item" href="./action1.html">Action 1</a></li>
+                                <li><a class="dropdown-item" href="./action.html">Idée de réalisation</a></li>
+                                <li><a class="dropdown-item" href="./action1.html">Présentez moi vos projets</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
@@ -48,7 +49,7 @@
                 </div>
             </div>
         </nav>
-        <h2>PHOTO</h2>
+        <h2 class="photo">PHOTO</h2>
         <div class="image">
             <img src="./images/img1.png" alt="photo">
             <img src="./images/img1.png" alt="photo">
