--- a/action.html
+++ b/action.html
@@ -48,9 +48,9 @@
                 </div>
             </div>
         </nav>
-        <h2 class="action">Idée de réalisation</h2>
-        <ul>
-            <li>Site statique pour vous présenter ou vos travaux </li>
+        <h2 class="action">Idée de réalisation de site internet</h2>
+        <ul class="ul_action">
+            <li>Site statique pour vous présenter ou présenter vos travaux </li>
             <li>Site statique pour présenter votre entreprise</li>
             <li>Site dynamique pour présenter votre entreprise</li>
             <li>Site e commerce</li>
