--- a/description.html
+++ b/description.html
@@ -69,11 +69,10 @@
                     <div class="modal-body">
                         <form>
                             <div class="mb-3">
-                                <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, incidunt!</h3>
+                                <h3>Titre Professionnel Développeur web et web mobile</h3>
                             </div>
                             <div class="mb-3">
-                                <!-- <label for="message-text" class="col-form-label">Message:</label> -->
-                                <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, rerum? </h3>
+                                <h3>Formation aux campus yschools de Troyes </h3>
                             </div>
                         </form>
                     </div>
@@ -96,11 +95,11 @@
                     <div class="modal-body">
                         <form>
                             <div class="mb-3">
-                                <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, incidunt!</h3>
+                                <h3>Création de nombreux site vitrine pour les entreprises voulant se faire voir sur le
+                                    net</h3>
                             </div>
                             <div class="mb-3">
-                                <!-- <label for="message-text" class="col-form-label">Message:</label> -->
-                                <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, rerum? </h3>
+                                <h3>Site responsive adaptable sur ordinateur tablette smartphone</h3>
                             </div>
                         </form>
                     </div>
@@ -123,11 +122,11 @@
                     <div class="modal-body">
                         <form>
                             <div class="mb-3">
-                                <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, incidunt!</h3>
+                                <h3>Je suis mobile pour tous vos projets</h3>
                             </div>
                             <div class="mb-3">
-                                <!-- <label for="message-text" class="col-form-label">Message:</label> -->
-                                <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam, rerum? </h3>
+                                <h3>Je suis dans le département de la marne et donc limitrophes à beaucoup de
+                                    département</h3>
                             </div>
                         </form>
                     </div>
