--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
                 <img src="./images/téléchargement (2).jfif" class="logo" alt="image logo">
-                <!-- <a class="navbar-brand">Logo</a> -->
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -56,7 +55,7 @@
 
         <h1 class="portfolio">PORTFOLIO</h1>
 
-        <div id="carouselExampleCaptions" class="carousel slide mt-5" data-bs-ride="carousel">
+        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators btn btn-dark mb-0">
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
                     aria-current="true" aria-label="Slide 1"></button>
@@ -69,28 +68,28 @@
             </div>
             <div class="carousel-inner d-flex">
                 <div class="carousel-item active text-center">
-                    <img src="./images/img1.png" class="w-20" alt="image">
+                    <img src="./images/img3.png" class="image_index w-20" alt="image">
                     <div class="mb-5 mt-3">
                         <h5 class="mt-5">Premier site</h5>
                         <p class="mt-5">Création d'un site vitrine.</p>
                     </div>
                 </div>
                 <div class="carousel-item text-center">
-                    <img src="./images/img2.jfif" class="w-20" alt="image">
+                    <img src="./images/img3.png" class="image_index w-20" alt="image">
                     <div class="mb-5 mt-3">
                         <h5 class="mt-5">Deuxiéme site</h5>
                         <p class="mt-5">Création d'un site vitrine.</p>
                     </div>
                 </div>
                 <div class="carousel-item text-center">
-                    <img src="./images/img3.png" class="w-20" alt="image">
+                    <img src="./images/img3.png" class="image_index w-20" alt="image">
                     <div class="mb-5 mt-3">
                         <h5 class="mt-5">Troisième site</h5>
                         <p class="mt-5">Création d'un site reservation en ligne.</p>
                     </div>
                 </div>
                 <div class="carousel-item text-center">
-                    <img src="./images/img3.png" class="w-20" alt="image">
+                    <img src="./images/img3.png" class="image_index w-20" alt="image">
                     <div class="mb-5 mt-3">
                         <h5 class="mt-5">Quatriéme site</h5>
                         <p class="mt-5">Création d'un site reservation en ligne.</p>
