--- a/photo.html
+++ b/photo.html
@@ -51,11 +51,11 @@
         </nav>
         <h2 class="photo">PHOTO</h2>
         <div class="image">
-            <img src="./images/img1.png" alt="photo">
-            <img src="./images/img1.png" alt="photo">
-            <img src="./images/img1.png" alt="photo">
-            <img src="./images/img1.png" alt="photo">
-            <img src="./images/img1.png" alt="photo">
+            <img class="image_photo" src="./images/img1.png" alt="photo">
+            <img class="image_photo" src="./images/img1.png" alt="photo">
+            <img class="image_photo" src="./images/img1.png" alt="photo">
+            <img class="image_photo" src="./images/img1.png" alt="photo">
+            <img class="image_photo" src="./images/img1.png" alt="photo">
         </div>
     </div>
 
