--- a/action1.html
+++ b/action1.html
@@ -50,8 +50,9 @@
             </div>
         </nav>
         <h2 class="action1">Présentez moi vos idées</h2>
-        <h5>Mes coordonnées</h5>
-        <a href="mailto:stevetissier@orange.fr">stevetissier@orange.fr</a>
+        <h5 class="infos_action1">Mes coordonnées</h5>
+        <p class="tel_action1">Tel:0613113056</p>
+        <a class="mail_action1" href="mailto:stevetissier@orange.fr">stevetissier@orange.fr</a>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
