--- a/index.html
+++ b/index.html
@@ -71,6 +71,8 @@
                     <img src="./images/img3.png" class="image_index w-20" alt="image">
                     <div class="mb-5 mt-3">
                         <h5 class="mt-5">Premier site</h5>
+                        <a target="blank" href="https://tissiersteve.github.io/TissierSteve_3_15112021/">Aperçu du
+                            site</a>
                         <p class="mt-5">Création d'un site vitrine.</p>
                     </div>
                 </div>
@@ -78,6 +80,8 @@
                     <img src="./images/img3.png" class="image_index w-20" alt="image">
                     <div class="mb-5 mt-3">
                         <h5 class="mt-5">Deuxiéme site</h5>
+                        <a target="blank" href=" https://tissiersteve.github.io/BOOKI/">Aperçu du
+                            site</a>
                         <p class="mt-5">Création d'un site vitrine.</p>
                     </div>
                 </div>
@@ -85,6 +89,8 @@
                     <img src="./images/img3.png" class="image_index w-20" alt="image">
                     <div class="mb-5 mt-3">
                         <h5 class="mt-5">Troisième site</h5>
+                        <a target="blank" href="https://tissiersteve.github.io/SITE-AGENCE-DE-VOYAGE/">Aperçu du
+                            site</a>
                         <p class="mt-5">Création d'un site reservation en ligne.</p>
                     </div>
                 </div>
