--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <img src="./images/img3.png" class="image_index w-20" alt="image">
                     <div class="mb-5 mt-3">
                         <h5 class="mt-5">Troisième site</h5>
-                        <a target="blank" href="https://tissiersteve.github.io/SITE-AGENCE-DE-VOYAGE/">Aperçu du
+                        <a target="blank" href="https://tissiersteve.github.io/AGENCE-DE-VOYAGE/">Aperçu du
                             site</a>
                         <p class="mt-5">Création d'un site reservation en ligne.</p>
                     </div>
