--- a/index.html
+++ b/index.html
@@ -98,7 +98,10 @@
                     <img src="./images/img3.png" class="image_index w-20" alt="image">
                     <div class="mb-5 mt-3">
                         <h5 class="mt-5">Quatriéme site</h5>
+                        <a target="blank" href="https://tissiersteve.github.io/RESERVATION/">Aperçu du
+                            site</a>
                         <p class="mt-5">Création d'un site reservation en ligne.</p>
+
                     </div>
                 </div>
             </div>
